welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:17: error: not found: value avancer
  avancer();
  ^PictureMono1:21: error: not found: value avancer
  avancer();
  ^