welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def peindre(){
  leveBrosse()
	baisseBrosse()
}


def FaireV(){
  for (variable <- 1 to 2){
    avance();
   }
  peindre()
  avance();
  gauche();
  avancer();
  peindre();
  recule();
  droite();
  avancer();
  peindre();
  for (variable <- 1 to 2){
   avance();
  }
}
  